# app/serializers/product_serializer.rb
@@ -6,7 +6,7 @@ class ProductSerializer
              :package_volume, :package_dimensions, :dimensions,
              :is_parcel, :is_bestseller, :is_popular, :category_id,
              :delivery_type, :delivery_name, :delivery_cost,
-             :delivery_reason, :created_at, :updated_at
+             :delivery_reason, :breadcrumbs, :created_at, :updated_at
   
   attribute :variants do |product|
     product.variants || []
@@ -24,6 +24,10 @@ class ProductSerializer
   
   attribute :category_name do |product|
     product.category&.translated_name || product.category&.name || ''
+  end
+
+  attribute :breadcrumbs, if: ->(_record, params) { params&.dig(:detail) } do |product|
+    Seo::BreadcrumbsBuilder.for_product(product)
   end
 end
 
